--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <div class="container">
 
             <nav id="navbar">
-
+                <a href="#">All Items</a>
+                <a href="#">Print Design</a>
+                <a href="#">Web Design</a>
+                <a href="#">Logo Design</a>
+                
             </nav>
 
 
